this is a final demo

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class=top-banner>
+    <section class="top-banner flexiblecontainer">
         <div class="half-width">
             <h1>Hello welcome</h1>
             <h1>to <span>Adnan Sabbir world!</span></h1>
@@ -26,7 +26,7 @@
             <img src="../image/header.png">
     </section>
     <div class="top-banner"></div>
-    <section class="dream">
+    <section class="dream flexiblecontainer">
         <div class="half-width"">
             <img class="companylogo" src="../image/bro.svg">
         </div>
@@ -37,7 +37,27 @@
                 mollitia totam labore sunt eum distinctio quaerat! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat soluta voluptatibus natus, rerum velit numquam dolore, culpa sint unde voluptatum totam officiis in consequatur aut necessitatibus, quam temporibus incidunt optio! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi neque soluta, rerum deleniti maiores tempora esse tempore, et quis voluptas dicta corporis non perferendis itaque totam officiis, labore obcaecati earum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est, maxime dolor commodi eveniet mollitia veritatis repellat exercitationem iste sapiente tempora officiis, fuga nobis optio quod labore corporis id magnam molestias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores adipisci numquam voluptatum. Voluptatibus voluptatem fuga optio placeat veritatis. Debitis recus</p>
         </div>
     </section>
-    </div>
+    <section class="experience">
+       <h1 class="hire"><span>Why you hire me?</span> </h1>
+        <div class="flexiblecontainer">
+            <div class="half-width hiringitem" >
+                <h3>Responsive design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit saepe hic laudantium officia laborum consequuntur dignissimos quidem eaque enim qui quibusdam, illo, magni ea ex consequatur temporibus, sed atque corporis?</p>
+            </div>
+            <div class="half-width  hiringitem">
+                <h3>clean code</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus in quam fuga eligendi cumque laborum, voluptas sed suscipit asperiores praesentium repellendus assumenda eius consequatur ratione sint qui exercitationem quod. Minus?</p>
+            </div>
+    
+        </div>
+
+    </section>
+    <section class="footer">
+        <div></div>
+            <img src="../image/logo.png" alt="this is a footer image">
+        </div>
+       <h4>thank you for visiting my first website</h4>
+    </section>
 </body>
 
 </html>
